# B.O.L.T

./: README.md  app.json  package.json  pubspec.yaml  setup.dart
.github/workflows/: build.yaml
android/: settings.gradle
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
assets/mihomo/: cache.db  config.yaml  settings.json  subscriptions.json
assets/mihomo/profiles/: .active  sub_1784535765846.yaml
helper/: Cargo.toml  build.rs
helper/src/service/: hub.rs  mod.rs  windows.rs
ios/: Podfile
ios/BoltVpn/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/BoltVpn.xcodeproj/: project.pbxproj
ios/BoltVpn.xcodeproj/xcshareddata/xcschemes/: BoltVpn.xcscheme
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: connection_controller.dart  logs_controller.dart  mihomo_service.dart  proxy_link_parser.dart  proxy_models.dart  settings_service.dart  subscriptions_service.dart
lib/screens/: app_shell.dart  home_screen.dart  locations_screen.dart  logs_screen.dart  power_button.dart  settings_screen.dart  settings_widgets.dart  subscriptions_screen.dart
lib/theme/: app_theme.dart  app_tokens.dart
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
windows/: BoltVpn.sln  CMakeLists.txt
windows/BoltVpn/: BoltVpn.cpp  BoltVpn.vcxproj  BoltVpn.vcxproj.filters  resource.h
windows/BoltVpn.Package/: BoltVpn.Package.wapproj  Package.appxmanifest
windows/runner/: Runner.rc  main.cpp
(+4 files in other folders)
