[package]
name = "bolt_helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bolt_helper"
path = "src/main.rs"

[dependencies]
windows-service = { version = "0.7.0", optional = true }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.93"
warp = "0.3.7"
serde = { version = "1.0.215", features = ["derive"] }
once_cell = "1.20.2"
sha2 = "0.10.8"

[features]
default = ["windows-service"]
windows-service = ["dep:windows-service"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
